[package]
name = "pica-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.22.0",features=["full"]}
url = "2.3.1"
urlencoding = "2.1.2"
bytes = "1.3.0"
time = "0.3.17"
digest = "0.10.6"
sha2 = "0.10"
hex = "0.4.3"
hmac = "0.12.1"
serde = {version="1.0.147",features=["derive"]}
serde_json = "1.0.89"
reqwest = {version="0.11.13",features=["json"]}
thiserror = "1.0.37"