[package]
name = "spider-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
reqwest = {version="0.11.13"}
tl = {version="0.7.7"}
tokio = {version="1.22.0",features=["full"]}
spider-engine = {path="../spider-engine"}
async-trait = "0.1.58"
futures = "0.3.25"
env_logger = "0.10.0"
log = "0.4.17"
visdom = "0.5.8"